tests/e2e/semantics/mutation/string_contains_item_invalid2.story
a = [1, 2]
b = a.contains(item: "a")
